--- a/experiencia.html
+++ b/experiencia.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="educacao.css">
+    <link rel="stylesheet" href="experiencia.css">
 
 </head>
 
@@ -31,10 +31,10 @@
     </div>
     <nav>
 <ul>
-    <li><a href="habilidades.html">Habilidades</a></li>
-    <li><a href="index.html">Inicio</a></li>
-    <li><a href="educacao.html">Educação</a></li>
-    <li><a href="contato.html">Contato</a></li>
+            <li><a href="habilidades.html">Habilidades</a></li>
+            <li><a href="index.html">inicio</a></li>
+            <li><a href="educacao.html">Educação</a></li>
+            <li><a href="contato.html">Contato</a></li>
 </ul>
 </nav>
 </body>
